# PycharmProjects

CO324/CO324 Lab 5: Stateful systems/: answers.txt
CO324/CO324 Lab 5: Stateful systems/ex1/: answers.txt  code  task_client.py  task_pb2.py  task_pb2_grpc.py  task_server.py  tasklist.protobuf
CO324/CO324 Lab 5: Stateful systems/ex2/: task_client.py  task_pb2.py  task_server.py  tasklist.protobuf
CO324/CO324 Lab 5: Stateful systems/ex3/: task.proto  task_client.py  task_pb2_grpc.py  task_server.py  tasklist.protobuf
CO324/Exploring APIs with the Requests 3 module/: answers.txt  ex1.py  ex1a.py  ex1b.py  ex1c.py  ex1d.py  ex1e.py  ex2a.py  ex2b.py  ex2c.py  test1.py
CO324/Python crash course part II/: answer.txt  ex1.py  ex2.py  ex3.py  student_details.txt
CO324/Python crash course part II/lab1/: ex4.py  student_registrations.json
CO324/docker/: answer.txt
CO324/gRPCAPIs_week4/: ex1.py
CO324/gRPCAPIs_week4/testing/: client.py  pingpong_pb2_grpc.py  server.py  test.py
CO324/gRPCAPIs_week4/todo/: task_client.py  task_pb2.py  task_server.py
CO324/lab6/: client.py  server.py  server_proto.py
CO324/lab6/1/: answers.txt
CO324/learn api/: __init__.py  test1.proto
CO324/learn api/cal/: calculator.proto  calculator.py  calculator_pb2.py  calculator_pb2_grpc.py  client.py  code  server.py
CO324/mqtt/: test1.py
co322_week3/: plotter.py
project/camera/: CMakeLists.txt  main.cpp
project/sim/: agv.py  list_gee.py  local_controller.py  map.py  runfile.py  schedule.py
project/sim2/: agv.py  cell.py  map.py  runfile.py
pythonpractice/: dictionary.py
(+143 files in other folders)
